:recycle: fix delegate matrix spacings for m breakpoint

--- a/src/components/votesPreview/voteMatrix.css
+++ b/src/components/votesPreview/voteMatrix.css
@@ -199,3 +199,13 @@
   margin: 0;
   white-space: nowrap;
 }
+
+@media (--large-viewport) {
+  .header {
+    margin: 0 32px 22px;
+  }
+
+  .listWrapper {
+    margin: 0 32px;
+  }
+}
